--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 annotated-types==0.7.0
 anyio==4.10.0
+blockbuster==1.5.25
 certifi==2025.8.3
+cffi==1.17.1
 charset-normalizer==3.4.3
+click==8.2.1
+cloudpickle==3.1.1
 contourpy==1.3.3
+cryptography==44.0.3
 cycler==0.12.1
 distro==1.9.0
 docopt==0.6.2
 dotenv==0.9.9
 fonttools==4.59.1
+forbiddenfruit==0.1.4
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -15,14 +21,18 @@ idna==3.10
 jiter==0.10.0
 jsonpatch==1.33
 jsonpointer==3.0.0
+jsonschema_rs==0.29.1
 kiwisolver==1.4.9
 langchain==0.3.27
 langchain-core==0.3.74
 langchain-openai==0.3.31
 langchain-text-splitters==0.3.9
 langgraph==0.6.6
+langgraph-api==0.3.1
 langgraph-checkpoint==2.1.1
+langgraph-cli==0.3.8
 langgraph-prebuilt==0.6.4
+langgraph-runtime-inmem==0.8.1
 langgraph-sdk==0.2.3
 langsmith==0.4.16
 matplotlib==3.10.5
@@ -34,8 +44,10 @@ packaging==25.0
 pandas==2.3.2
 pillow==11.3.0
 pipreqs==0.4.13
+pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
+PyJWT==2.10.1
 PyMySQL==1.1.2
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
@@ -51,13 +63,19 @@ simplejson==3.20.1
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.43
+sse-starlette==2.1.3
+starlette==0.47.3
+structlog==25.4.0
 tenacity==9.1.2
 tiktoken==0.11.0
 tqdm==4.67.1
+truststore==0.10.4
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 tzdata==2025.2
 urllib3==2.5.0
+uvicorn==0.35.0
+watchfiles==1.1.0
 xxhash==3.5.0
 yarg==0.1.10
 zstandard==0.24.0
